--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Lobster&display=swap" rel="stylesheet">
 
-  <link rel="icon" type="image/png" href="/favicon.png" />
+  <link rel="icon" type="image/png" href="/logo-mark.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Banjulo</title>
 </head>
